tests/paczka1/small_fuzzy/66165584.err
Error in line 2: 1397x A372 62,9
Error in line 12: S747 A238 0,5
